# CodeDoc-AI

./: .coverage  .gitignore  CHANGELOG.md  GITHUB_UPLOAD_GUIDE.md  IMMEDIATE_ACTION_PLAN.md  LAUNCH_CHECKLIST.md  LICENSE  MASTER_PLAN.md  NEXT_LEVEL_STRATEGY.md  PROGRESS_UPDATE.md  PROJECT_FILES_SUMMARY.md  QUICK_TEST.md  README.md  README_FINALE.md  ROADMAP.md  beautiful_docs.html  demo.js  demo.py  demo_docs  demo_docs.html  package-lock.json  package.json  pyproject.toml  requirements.txt  showcase.html  social_banner.html  test_js_parser.py  test_output.html
.github/workflows/: ci.yml
codedoc/: __init__.py  ai.py  cli.py  core.py  js_parser.py  parser.py  templates.py
codedoc_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
demo_docs/: documentation.html  documentation.md  documentation_data.json  style.css
docs/: documentation.html  documentation_data.json
tests/: __init__.py  test_cli.py  test_core.py  test_parser.py
vscode-extension/: package-lock.json  package.json  tsconfig.json
web_interface/: app.py
web_interface/templates/: demo.html  index.html
