[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codedoc-ai"
version = "0.1.0"
description = "🚀 Smart Documentation Generator with AI-powered examples"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CodeDoc AI Team", email = "hello@codedoc-ai.com"}
]
maintainers = [
    {name = "CodeDoc AI Team", email = "hello@codedoc-ai.com"}
]
keywords = [
    "documentation", 
    "ai", 
    "python", 
    "code-generation", 
    "documentation-generator",
    "automated-documentation",
    "openai",
    "ast",
    "code-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "markdown>=3.4.0",
    "python-dotenv>=1.0.0",
    "typing_extensions>=4.0.0",
    "astunparse>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocstrings>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/codedoc-ai/codedoc-ai"
Documentation = "https://codedoc-ai.github.io/codedoc-ai/"
Repository = "https://github.com/codedoc-ai/codedoc-ai.git"
Issues = "https://github.com/codedoc-ai/codedoc-ai/issues"
Changelog = "https://github.com/codedoc-ai/codedoc-ai/blob/main/CHANGELOG.md"

[project.scripts]
codedoc = "codedoc.cli:main"

[tool.setuptools]
packages = ["codedoc"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["codedoc"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["codedoc"]
omit = [
    "tests/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"] 